# astrbotmcp

./: .gitignore  MCP_DEPLOYMENT.md  README.md  main.py  package-lock.json  package.json  pyproject.toml  todolist.md  tsconfig.json
.github/workflows/: ci.yml  publish-to-npm.yml  publish-to-pypi.yml
astrbot-mcp-npx/: LICENSE.txt  README.md  package.json  test-astrbot-mcp-0.0.1.tgz
astrbot_mcp/: __init__.py  astrbot_client.py  config.py  server.py  tools.py
astrbot_mcp/tools/: __init__.py  config_search_tool.py  config_tools.py  control_tools.py  helpers.py  log_tools.py  mcp_panel_tools.py  message_tools.py  platform_tools.py  plugin_admin_tools.py  plugin_market_tools.py  session_tools.py  types.py
astrbot_mcp/tools/message/: __init__.py  cache.py  direct.py  quote.py  utils.py  webchat.py
routes/: __init__.py  auth.py  backup.py  chat.py  chatui_project.py  command.py  config.py  conversation.py  file.py  knowledge_base.py  log.py  persona.py  platform.py  plugin.py  route.py  session_management.py  skills.py  stat.py  t2i.py  tools.py  update.py
src/: clients.ts  config.ts  discovery-tools.ts  index.ts  logs.ts  message-tools.ts  plugin-tools.ts  result.ts  runtime-hints.ts  system-tools.ts  tooling.ts  tools.ts  utils.ts
test/: config.test.ts  internal-tools.test.ts  logs.test.ts  mcp-smoke.ts  message-tools.test.ts  plugin-tools.test.ts  runtime-hints.test.ts
tests/: test_smoke.py
